Sun Sep 15 23:53:28 BST 2002  Colin Watson  <cjwatson@debian.org>

	Upgrade to gettext 0.11.5.

	* configure.in: Remove ALL_LINGUAS. Add AM_GNU_GETTEXT_VERSION.
	* po/LINGUAS: New file. Adds sv to the value of the old ALL_LINGUAS.
	* po/Makevars: New file.
	* po/POTFILES.in: Add src/fakesecurity.c. Change src/lexgrog.c to
	  src/lexgrog.l.
	* tools/mkinstalldirs: Upgrade to current version.

Fri Sep  6 23:58:10 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (xcopy): Don't print the error from fopen() if it's
	  just ENOENT.

Tue Sep  3 21:53:56 BST 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_lookup.c (list_extensions): Prevent a theoretical buffer
	  overflow by allocating names and ext as necessary rather than
	  using a fixed-length array.
	  (dblookup): Update callers.
	* libdb/db_delete.c (dbdelete): Likewise.
	* libdb/db_storage.h: Update prototypes. ENTRIES definition is now
	  redundant.

Tue Sep  3 20:26:22 BST 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_delete.c (dbdelete): Construct new multi_content
	  correctly (names as well as extensions) when deleting some of its
	  elements.

Fri Aug 30 03:11:42 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): Restore the fix from 13 July 2001
	  that got lost while implementing -E. We need to look up the
	  correct character set each time a page is displayed, but still
	  honour any device explicitly set by -E, so test different_encoding
	  rather than roff_device.

Thu Aug 29 01:14:19 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c (setenv_less): Export the value of $MAN_PN for the
	  benefit of other pagers (suggestion from Jeff Sheinberg).

Thu Aug 29 00:50:54 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c: dbfilters is no longer a global variable.
	  (get_preprocessors, make_roff_command, display): Take an extra
	  dbfilters argument.
	  (local_man_loop, make_roff_command, display, display_filesystem):