@@ -40,7 +40,12 @@ struct compression comp_list[] = {
 /* If we have compress, incorporate the following */
 #ifdef UNCOMPRESS
 	{UNCOMPRESS, "Z", NULL},
-#endif /* GUNZIP */
+#endif /* UNCOMPRESS */
+
+/* If we have bzip2, incorporate the following */
+#ifdef BUNZIP2
+	{BUNZIP2, "bz2", NULL},
+#endif /* BUNZIP2 */
 
 /*------------------------------------------------------*/
 /* Add your decompressor(s) and extension(s) below here */
