@@ -199,6 +199,7 @@
 
 #  define GUNZIP "@gunzip@"
 #  define UNCOMPRESS "@uncompress@"
+#  define BUNZIP2 "@bunzip2@"
 #endif /* COMP_SRC */
 
 /*-----------------------------------------------------------------------*/
