@@ -1,3 +1,10 @@
+Mon Sep 16 00:25:17 BST 2002  Clint Adams  <schizo@debian.org>
+
+	* configure.in: Detect bzip2.
+	* include/comp_src.h.in (comp_list): Include bunzip2 support if
+	  available.
+	* include/manconfig.h.in: Add BUNZIP2 definition.
+
 Sun Sep 15 23:53:28 BST 2002  Colin Watson  <cjwatson@debian.org>
 
 	Upgrade to gettext 0.11.5.
